--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Digital Footprint Simulator</title>
+  <title>User Interaction Tracker </title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
 
   <header>
-    <h1>🕵️ Digital Footprint Simulator</h1>
+    <h1> User Interaction Tracker</h1>
     <p>Visualizing how your interactions create data trails</p>
   </header>
 
@@ -23,7 +23,7 @@
     </section>
 
     <section class="dashboard">
-      <h2>Tracked Digital Footprint</h2>
+      <h2>Tracked User Interactions</h2>
       <div class="stats">
         <div class="card">
           <span id="clickCount">0</span>
@@ -57,3 +57,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
